# qautozen

./: CMakeLists.txt  file_processor.cpp  file_processor.h  main.cpp  main_window.cpp  main_window.h  qautozen.pro  sound_crap.c  sound_thread.cpp  sound_thread.h  sound_thread_portaudio.cpp  sound_thread_portaudio.h
